--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   pull_to_refresh: 1.6.3
   cached_network_image: ^2.5.0
   url_launcher: ^5.7.10
+  provider: ^4.3.3
+  lottie: ^0.7.0+1
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +38,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/lottie/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
