--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   url_launcher: ^5.7.10
   provider: ^4.3.3
   lottie: ^0.7.0+1
+  audio_service: ^0.16.2
+  sqflite: ^1.3.2+3
 
 dev_dependencies:
   flutter_test:
