--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   lottie: ^0.7.0+1
   sqflite: ^1.3.2+3
   flutter_search_bar: ^2.1.0
+  ff_navigation_bar: ^0.1.5
+  flutter_easyloading: ^2.2.2
 
 dev_dependencies:
   flutter_test:
